[gd_scene load_steps=22 format=4 uid="uid://dbrst2twjd0pu"]

[ext_resource type="Script" uid="uid://be46mgxc70khx" path="res://objects/interactables/button/cog_button.gd" id="1_21ejp"]
[ext_resource type="Texture2D" uid="uid://d046bnroqh3a8" path="res://models/props/facility_objects/button/button_button3.png" id="1_74im7"]
[ext_resource type="Texture2D" uid="uid://b7ogyyudcn2db" path="res://models/props/facility_objects/button/button_buttonBase.png" id="2_sxtyp"]
[ext_resource type="Texture2D" uid="uid://dbdsvboh2okni" path="res://models/props/facility_objects/button/button_square_drop_shadow.png" id="3_2widq"]
[ext_resource type="AudioStream" uid="uid://di6hcgi1j76lb" path="res://audio/sfx/objects/button/CHQ_FACT_switch_pressed.ogg" id="5_3f0ln"]
[ext_resource type="AudioStream" uid="uid://nenuu1b28ks8" path="res://audio/sfx/objects/button/CHQ_FACT_switch_popup.ogg" id="6_faa3l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s6l3s"]
resource_name = "button1"
cull_mode = 2
albedo_texture = ExtResource("1_74im7")
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_wtjba"]
_surfaces = [{
"aabb": AABB(-76.2001, -76.2, -91.0962, 152.4, 152.4, 83.432),
"format": 34896613377,
"index_count": 54,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAHAAUABAAGAAcAAQAFAAcAAQADAAUABgACAAAABgAEAAIABgAJAAcABgAIAAkABwAKAAEABwAJAAoAAQALAAAAAQAKAAsAAAAIAAYAAAALAAgA"),
"lods": [11.4653, PackedByteArray("AAACAAEAAgAHAAEAAgAGAAcABgACAAAABgAJAAcABgAIAAkABwAKAAEABwAJAAoAAQALAAAAAQAKAAsAAAAIAAYAAAALAAgA"), 60.1193, PackedByteArray("BgAJAAEABgAIAAkAAQAJAAoAAQALAAYAAQAKAAsABgALAAgA")],
"name": "button1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("AAD//wUuAAD/////BS4AAL4eQOEAAAAAQOFA4QAAAAC+Hr4eAAAAAEDhvh4AAAAAAAAAAAUuAAD//wAABS4AAAAAAAD//wAA//8AAP//AAD///////8AAAAA/////wAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_gsk8d"]
resource_name = "button_Mesh_001"
_surfaces = [{
"aabb": AABB(-76.2001, -76.2, -91.0962, 152.4, 152.4, 83.432),
"attribute_data": PackedByteArray("hkCCQIZAgkCGQIJAhkCCQIZA1cGGQNXBhkDVwYZA1cEOUApQDlAKUA5QClAOUE2yDlBNsg5QTbJRsgpQUbIKUFGyClBRsk2yUbJNslGyTbLZwYJA2cGCQNnBgkDZwYJA2cHVwdnB1cHZwdXB2cHVwev7gkDZwXAG6/vVwdnB5/t0BtXBhkDn+3QGgkCGQHAGhkDVwYZA1cGGQNXB2cGCQNnBgkDZwYJA6/vVwXQGgkCGQIJAhkCCQIZA1cGGQNXBDlAKUNnBgkDZwYJA2cHVwdnB1cE="),
"format": 34896613399,
"index_count": 54,
"index_data": PackedByteArray("AAAMAAQAAAAJAAwACAARAAsACAAOABEADwAYABIADwAUABgABgATABoABgANABMAFgAKAAIAFgAQAAoAFQAeABkAFQAcAB4AGwAhAAcAGwAfACEABQAiAAEABQAgACIAAwAdABcAAwAjAB0A"),
"lods": [11.4653, PackedByteArray("AAAwAC4AMAAzAC4AMAAxADMAMQAwACwAMgAeADQAMgAcAB4AGwAhAAcAGwAfACEALwAiAC0ALwAgACIAAwAdABcAAwAjAB0A"), 60.1193, PackedByteArray("JwAqACQAKAAcAB4ABwAfACEAJQArACkAJgAgACIAFwAjAB0A")],
"material": SubResource("StandardMaterial3D_s6l3s"),
"name": "button1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 53,
"vertex_data": PackedByteArray("AAD//wUuauwAAP//BS5U1QAA//8FLmrsAAD//wUuVNX/////BS5q7P////8FLlTV/////wUuauz/////BS5U1b4eQOEAAP//vh5A4QAAauy+HkDhAABq7EDhQOEAAP//QOFA4QAAauxA4UDhAABq7L4evh4AAP//vh6+HgAAauy+Hr4eAABq7EDhvh4AAP//QOG+HgAAauxA4b4eAABq7AAAAAAFLmrsAAAAAAUuVNUAAAAABS5q7AAAAAAFLlTV//8AAAUuauz//wAABS5U1f//AAAFLmrs//8AAAUuVNUAAAAA//9U1QAAAAD//1TV//8AAP//VNX//wAA//9U1f///////1TV////////VNUAAP////9U1QAA/////1TV/////wUuGeX/////BS4J/P////8FLlTVAAAAAAUuie8AAAAABS5U1QAAAAAFLonq//8AAP////8AAP///////wAA//8FLv//AAD//wUuVNX/////BS7a8P////8FLlTVvh5A4QAAmvgAAAAABS6R5wAAAAAFLlTV//8AAAUu/////wAABS5U1bLJTDZU1aoqs0lLtlRVqqqyyUw2VNWqKku2s0mqqlRV/z//v7LJTDazSUu2/z//v7LJTDZLtrNJ/z//v0w2ssmzSUu2/z//v0w2s8lLtrNJTDayyaoqVNWzSUu2VFWqqkw2ssmqKlTVS7azSaqqVFWqKlTVVFWqqqoqVNWpqlRVVNWqKqqqVFVU1aoqVFWqqm+fFxhyvVMiY9TORAc2eMubKzC741w87V0kyNfM1VQhJxH/f2PUzkSOv/oqY9TORNB+/PM9UtDcmyswu0VYqvubKzC7")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wtjba")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_p735q"]
data = PackedVector3Array(-76.2001, 76.2, -76.0979, 57.8962, 57.8962, -91.0962, 76.2001, 76.2, -76.0979, -76.2001, 76.2, -76.0979, -57.8985, 57.8962, -91.0962, 57.8962, 57.8962, -91.0962, -57.8985, 57.8962, -91.0962, 57.8962, -57.8985, -91.0962, 57.8962, 57.8962, -91.0962, -57.8985, 57.8962, -91.0962, -57.8985, -57.8985, -91.0962, 57.8962, -57.8985, -91.0962, -57.8985, -57.8985, -91.0962, 76.2001, -76.2, -76.0979, 57.8962, -57.8985, -91.0962, -57.8985, -57.8985, -91.0962, -76.2001, -76.2, -76.0979, 76.2001, -76.2, -76.0979, 76.2001, 76.2, -76.0979, 57.8962, -57.8985, -91.0962, 76.2001, -76.2, -76.0979, 76.2001, 76.2, -76.0979, 57.8962, 57.8962, -91.0962, 57.8962, -57.8985, -91.0962, -76.2001, -76.2, -76.0979, -57.8985, 57.8962, -91.0962, -76.2001, 76.2, -76.0979, -76.2001, -76.2, -76.0979, -57.8985, -57.8985, -91.0962, -57.8985, 57.8962, -91.0962, -76.2001, -76.2, -76.0979, 76.2001, -76.2, -7.6641, 76.2001, -76.2, -76.0979, -76.2001, -76.2, -76.0979, -76.2001, -76.2, -7.6641, 76.2001, -76.2, -7.6641, 76.2001, -76.2, -76.0979, 76.2001, 76.2, -7.6641, 76.2001, 76.2, -76.0979, 76.2001, -76.2, -76.0979, 76.2001, -76.2, -7.6641, 76.2001, 76.2, -7.6641, 76.2001, 76.2, -76.0979, -76.2001, 76.2, -7.6641, -76.2001, 76.2, -76.0979, 76.2001, 76.2, -76.0979, 76.2001, 76.2, -7.6641, -76.2001, 76.2, -7.6641, -76.2001, 76.2, -76.0979, -76.2001, -76.2, -7.6641, -76.2001, -76.2, -76.0979, -76.2001, 76.2, -76.0979, -76.2001, 76.2, -7.6641, -76.2001, -76.2, -7.6641)
backface_collision = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x1lay"]
resource_name = "buttonBase2"
cull_mode = 2
albedo_texture = ExtResource("2_sxtyp")
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_ghxmb"]
_surfaces = [{
"aabb": AABB(-93.44, -93.4399, -24.7484, 186.88, 186.88, 24.7484),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAFAAMAAgAEAAUABAAHAAUABAAGAAcABgABAAcABgAAAAEAAQAFAAcAAQADAAUABgACAAAABgAEAAIA"),
"name": "buttonBase2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAD/////AAD///////8AAAAA//8AAAAA/////wAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAP//AAD//wAA//8AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_pba2a"]
resource_name = "button_Mesh"
_surfaces = [{
"aabb": AABB(-93.44, -93.4399, -24.7484, 186.88, 186.88, 24.7484),
"attribute_data": PackedByteArray("///3SAAAzRrMEQAA///pwQAAMeXMEf//zBHNGswRzRrMEc0azBEx5cwRMeXMETHlN5jNGjeYzRo3mM0aN5gx5TeYMeU3mDHlq6/3SASqzRo3mAAAq6/pwQSqMeU3mP7/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AQAKAAQAAQAHAAoABgAPAAkABgAMAA8ADQAWABAADQATABYAEgADABUAEgAAAAMABQARABcABQALABEAFAAIAAIAFAAOAAgA"),
"material": SubResource("StandardMaterial3D_x1lay"),
"name": "buttonBase2",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAD//////78AAP////9U1QAA/////1TV/////////7////////9U1f///////1TVAAD//wAA//8AAP//AABU1QAA//8AAFTV/////wAA////////AABU1f////8AAFTVAAAAAAAA//8AAAAAAABU1QAAAAAAAFTV//8AAAAA/////wAAAABU1f//AAAAAFTVAAAAAP///78AAAAA//9U1QAAAAD//1TV//8AAP///7///wAA//9U1f//AAD//1TV/////1TVqipVVaqq/////1TVqiqqqlRV/z//v1TVqipVVaqq/z//v1TVqiqqqlRV/z//v6oqVNVVVaqq/z//v6oqVNWqqlVV/////6oqVNVVVaqq/////6oqVNWqqlVV")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ghxmb")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_i5pev"]
data = PackedVector3Array(-93.44, 93.4399, 0, 93.44, 93.4399, -24.7484, 93.44, 93.4399, 0, -93.44, 93.4399, 0, -93.44, 93.4399, -24.7484, 93.44, 93.4399, -24.7484, -93.44, 93.4399, -24.7484, 93.44, -93.4399, -24.7484, 93.44, 93.4399, -24.7484, -93.44, 93.4399, -24.7484, -93.44, -93.4399, -24.7484, 93.44, -93.4399, -24.7484, -93.44, -93.4399, -24.7484, 93.44, -93.4399, 0, 93.44, -93.4399, -24.7484, -93.44, -93.4399, -24.7484, -93.44, -93.4399, 0, 93.44, -93.4399, 0, -93.44, -93.4399, 0, 93.44, 93.4399, 0, 93.44, -93.4399, 0, -93.44, -93.4399, 0, -93.44, 93.4399, 0, 93.44, 93.4399, 0, 93.44, 93.4399, 0, 93.44, -93.4399, -24.7484, 93.44, -93.4399, 0, 93.44, 93.4399, 0, 93.44, 93.4399, -24.7484, 93.44, -93.4399, -24.7484, -93.44, -93.4399, 0, -93.44, 93.4399, -24.7484, -93.44, 93.4399, 0, -93.44, -93.4399, 0, -93.44, -93.4399, -24.7484, -93.44, 93.4399, -24.7484)
backface_collision = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_afmys"]
resource_name = "collisions"
cull_mode = 2
albedo_color = Color(1, 0, 1, 1)
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_fq1y7"]
_surfaces = [{
"aabb": AABB(-57.8978, -57.8977, -91.0962, 115.796, 115.795, 1e-05),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"name": "collisions",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAD//wAAAAD/////AAAAAAAAAAAAAAAA//8AAAAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_e708k"]
resource_name = "button_Mesh_003"
_surfaces = [{
"aabb": AABB(-57.8978, -57.8977, -91.0962, 115.796, 115.795, 1e-05),
"attribute_data": PackedByteArray("/3//f////3//fwAA//8AAA=="),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"material": SubResource("StandardMaterial3D_afmys"),
"name": "collisions",
"primitive": 3,
"uv_scale": Vector4(2, 2, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("AAD//wAA////////AAD//wAAAAAAAP////8AAAAA//////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_fq1y7")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f1pil"]
resource_name = "shadow"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("3_2widq")
roughness = 0.552786

[sub_resource type="ArrayMesh" id="ArrayMesh_kkl30"]
_surfaces = [{
"aabb": AABB(-15.24, -15.24, -3.38396e-15, 30.48, 30.48, 1e-05),
"format": 34359742465,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"name": "shadow",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("CtdzwQrXc0EK13MnCtdzQQrXc0EK13MnCtdzwQrXc8EK13OnCtdzQQrXc8EK13On")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_wq1d4"]
resource_name = "button_Mesh_002"
_surfaces = [{
"aabb": AABB(-15.24, -15.24, -3.38396e-15, 30.48, 30.48, 1e-05),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAAAA="),
"format": 34359742487,
"index_count": 6,
"index_data": PackedByteArray("AAADAAEAAAACAAMA"),
"material": SubResource("StandardMaterial3D_f1pil"),
"name": "shadow",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray("CtdzwQrXc0EK13MnCtdzQQrXc0EK13MnCtdzwQrXc8EK13OnCtdzQQrXc8EK13On/////////7//////////v/////////+//////////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_kkl30")

[sub_resource type="BoxShape3D" id="BoxShape3D_bat1u"]
size = Vector3(0.973235, 0.982044, 0.529648)

[node name="CogButton" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_21ejp")

[node name="Model" type="Node3D" parent="."]
transform = Transform3D(0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.005, 0, 0, 0)

[node name="button" type="MeshInstance3D" parent="Model"]
mesh = SubResource("ArrayMesh_gsk8d")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Model/button"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/button/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_p735q")

[node name="buttonBase" type="MeshInstance3D" parent="Model"]
mesh = SubResource("ArrayMesh_pba2a")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Model/buttonBase"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/buttonBase/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_i5pev")

[node name="collision_floor" type="MeshInstance3D" parent="Model"]
visible = false
mesh = SubResource("ArrayMesh_e708k")
skeleton = NodePath("")

[node name="shadow1" type="MeshInstance3D" parent="Model"]
transform = Transform3D(7.68462, 0, 0, 0, 7.68462, 0, 0, 0, 7.68462, 0, 0, -0.762)
mesh = SubResource("ArrayMesh_wq1d4")
skeleton = NodePath("")

[node name="PressSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_3f0ln")
bus = &"SFX"

[node name="RetractSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_faa3l")
bus = &"SFX"

[node name="PlayerCheck" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00193483, -0.00300854, -0.270928)
shape = SubResource("BoxShape3D_bat1u")

[node name="RetractTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerCheck" to="." method="body_entered"]
[connection signal="timeout" from="RetractTimer" to="." method="retract"]
